@@ -1,6 +1,7 @@
 2.2.8
  * MemoryUtil.getShort() should return an unsigned short also for architectures not supporting unaligned memory accesses (CASSANDRA-11973)
 Merged from 2.1:
+ * Improve digest calculation in the presence of overlapping tombstones (CASSANDRA-11349)
  * Account for partition deletions in tombstone histogram (CASSANDRA-12112)
 
 
